OS/src/OSParsers/OSParseosil.output
Grammar

    0 $accept: osildoc $end

    1 osildoc: quadraticcoefficients nonlinearExpressions INSTANCEDATAEND OSILEND

    2 quadraticcoefficients: /* empty */
    3                      | QUADRATICCOEFFICIENTSSTART quadnumberatt qTermlist QUADRATICCOEFFICIENTSEND

    4 quadnumberatt: NUMBEROFQTERMSATT QUOTE INTEGER QUOTE GREATERTHAN

    5 qTermlist: qterm
    6          | qTermlist qterm

    7 @1: /* empty */

    8 qterm: @1 QTERMSTART anotherqTermATT qtermend

    9 qtermend: ENDOFELEMENT
   10         | GREATERTHAN QTERMEND

   11 anotherqTermATT: /* empty */
   12                | anotherqTermATT qtermatt

   13 qtermatt: qtermidxOneatt
   14         | qtermidxTwoatt
   15         | qtermcoefatt
   16         | qtermidxatt

   17 qtermidxOneatt: IDXONEATT QUOTE INTEGER QUOTE

   18 qtermidxTwoatt: IDXTWOATT QUOTE INTEGER QUOTE

   19 qtermcoefatt: COEFATT QUOTE DOUBLE QUOTE
   20             | COEFATT QUOTE INTEGER QUOTE

   21 qtermidxatt: IDXATT QUOTE INTEGER QUOTE

   22 nonlinearExpressions: /* empty */
   23                     | NONLINEAREXPRESSIONSSTART nlnumberatt nlnodes NONLINEAREXPRESSIONSEND

   24 nlnumberatt: NUMBEROFNONLINEAREXPRESSIONS QUOTE INTEGER QUOTE GREATERTHAN

   25 nlnodes: /* empty */

   26 @2: /* empty */

   27 nlnodes: nlnodes NLSTART nlIdxATT GREATERTHAN nlnode @2 NLEND

   28 nlIdxATT: IDXATT QUOTE INTEGER QUOTE

   29 nlnode: number
   30       | variable
   31       | times
   32       | plus
   33       | sum
   34       | minus
   35       | negate
   36       | divide
   37       | power
   38       | product
   39       | ln
   40       | sqrt
   41       | square
   42       | sin
   43       | cos
   44       | exp
   45       | if
   46       | abs
   47       | max
   48       | min
   49       | E
   50       | PI
   51       | allDiff

   52 @3: /* empty */

   53 times: TIMESSTART @3 nlnode nlnode TIMESEND

   54 @4: /* empty */

   55 plus: PLUSSTART @4 nlnode nlnode PLUSEND

   56 @5: /* empty */

   57 minus: MINUSSTART @5 nlnode nlnode MINUSEND

   58 @6: /* empty */

   59 negate: NEGATESTART @6 nlnode NEGATEEND

   60 @7: /* empty */

   61 divide: DIVIDESTART @7 nlnode nlnode DIVIDEEND

   62 @8: /* empty */

   63 power: POWERSTART @8 nlnode nlnode POWEREND

   64 @9: /* empty */

   65 sum: SUMSTART @9 anothersumnlnode SUMEND

   66 anothersumnlnode: nlnode
   67                 | anothersumnlnode nlnode

   68 @10: /* empty */

   69 allDiff: ALLDIFFSTART @10 anotherallDiffnlnode ALLDIFFEND

   70 anotherallDiffnlnode: nlnode
   71                     | anotherallDiffnlnode nlnode

   72 @11: /* empty */

   73 max: MAXSTART @11 anothermaxnlnode MAXEND

   74 anothermaxnlnode: nlnode
   75                 | anothermaxnlnode nlnode

   76 @12: /* empty */

   77 min: MINSTART @12 anotherminnlnode MINEND

   78 anotherminnlnode: nlnode
   79                 | anotherminnlnode nlnode

   80 @13: /* empty */

   81 product: PRODUCTSTART @13 anotherproductnlnode PRODUCTEND

   82 anotherproductnlnode: nlnode
   83                     | anotherproductnlnode nlnode

   84 @14: /* empty */

   85 ln: LNSTART @14 nlnode LNEND

   86 @15: /* empty */

   87 sqrt: SQRTSTART @15 nlnode SQRTEND

   88 @16: /* empty */

   89 square: SQUARESTART @16 nlnode SQUAREEND

   90 @17: /* empty */

   91 cos: COSSTART @17 nlnode COSEND

   92 @18: /* empty */

   93 sin: SINSTART @18 nlnode SINEND

   94 @19: /* empty */

   95 exp: EXPSTART @19 nlnode EXPEND

   96 @20: /* empty */

   97 abs: ABSSTART @20 nlnode ABSEND

   98 @21: /* empty */

   99 if: IFSTART @21 nlnode nlnode nlnode IFEND

  100 @22: /* empty */

  101 number: NUMBERSTART @22 anotherNumberATT numberend

  102 @23: /* empty */

  103 variable: VARIABLESTART @23 anotherVariableATT variableend

  104 numberend: ENDOFELEMENT
  105          | GREATERTHAN NUMBEREND

  106 @24: /* empty */

  107 E: ESTART @24 eend

  108 eend: ENDOFELEMENT
  109     | GREATERTHAN EEND

  110 @25: /* empty */

  111 PI: PISTART @25 piend

  112 piend: ENDOFELEMENT
  113      | GREATERTHAN PIEND

  114 variableend: ENDOFELEMENT

  115 @26: /* empty */

  116 variableend: GREATERTHAN nlnode @26 VARIABLEEND
  117            | GREATERTHAN VARIABLEEND

  118 anotherNumberATT: /* empty */
  119                 | anotherNumberATT numberATT

  120 numberATT: numbertypeATT
  121          | numbervalueATT
  122          | numberidATT

  123 @27: /* empty */

  124 numbertypeATT: TYPEATT ATTRIBUTETEXT @27 QUOTE

  125 @28: /* empty */

  126 numberidATT: IDATT ATTRIBUTETEXT @28 QUOTE

  127 numbervalueATT: VALUEATT QUOTE DOUBLE QUOTE
  128               | VALUEATT QUOTE INTEGER QUOTE

  129 anotherVariableATT: /* empty */
  130                   | anotherVariableATT variableATT

  131 variableATT: variablecoefATT
  132            | variableidxATT

  133 variablecoefATT: COEFATT QUOTE DOUBLE QUOTE
  134                | COEFATT QUOTE INTEGER QUOTE

  135 variableidxATT: IDXATT QUOTE INTEGER QUOTE


Terminals, with rules where they appear

$end (0) 0
error (256)
QUOTE (258) 4 17 18 19 20 21 24 28 124 126 127 128 133 134 135
ATTRIBUTETEXT (259) 124 126
INTEGER (260) 4 17 18 20 21 24 28 128 134 135
DOUBLE (261) 19 127 133
OSILEND (262) 1
INSTANCEDATAEND (263) 1
VALUEATT (264) 127 128
NUMBEROFNONLINEAREXPRESSIONS (265) 24
IDXONEATT (266) 17
IDXTWOATT (267) 18
COEFATT (268) 19 20 133 134
IDATT (269) 126
TIMESSTART (270) 53
TIMESEND (271) 53
NUMBERSTART (272) 101
NUMBEREND (273) 105
NUMBEROFQTERMSATT (274) 4
IDXATT (275) 21 28 135
TYPEATT (276) 124
QTERMSTART (277) 8
QTERMEND (278) 10
QUADRATICCOEFFICIENTSSTART (279) 3
QUADRATICCOEFFICIENTSEND (280) 3
NONLINEAREXPRESSIONSSTART (281) 23
NONLINEAREXPRESSIONSEND (282) 23
NLSTART (283) 27
NLEND (284) 27
POWERSTART (285) 63
POWEREND (286) 63
PLUSSTART (287) 55
PLUSEND (288) 55
MINUSSTART (289) 57
MINUSEND (290) 57
DIVIDESTART (291) 61
DIVIDEEND (292) 61
LNSTART (293) 85
LNEND (294) 85
SQRTSTART (295) 87
SQRTEND (296) 87
SUMSTART (297) 65
SUMEND (298) 65
PRODUCTSTART (299) 81
PRODUCTEND (300) 81
ENDOFELEMENT (301) 9 104 108 112 114
EXPSTART (302) 95
EXPEND (303) 95
NEGATESTART (304) 59
NEGATEEND (305) 59
IFSTART (306) 99
IFEND (307) 99
SQUARESTART (308) 89
SQUAREEND (309) 89
COSSTART (310) 91
COSEND (311) 91
SINSTART (312) 93
SINEND (313) 93
GREATERTHAN (314) 4 10 24 27 105 109 113 116 117
VARIABLESTART (315) 103
VARIABLEEND (316) 116 117
ABSSTART (317) 97
ABSEND (318) 97
MAXSTART (319) 73
MAXEND (320) 73
ALLDIFFSTART (321) 69
ALLDIFFEND (322) 69
MINSTART (323) 77
MINEND (324) 77
ESTART (325) 107
EEND (326) 109
PISTART (327) 111
PIEND (328) 113


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
osildoc (75)
    on left: 1, on right: 0
quadraticcoefficients (76)
    on left: 2 3, on right: 1
quadnumberatt (77)
    on left: 4, on right: 3
qTermlist (78)
    on left: 5 6, on right: 3 6
qterm (79)
    on left: 8, on right: 5 6
@1 (80)
    on left: 7, on right: 8
qtermend (81)
    on left: 9 10, on right: 8
anotherqTermATT (82)
    on left: 11 12, on right: 8 12
qtermatt (83)
    on left: 13 14 15 16, on right: 12
qtermidxOneatt (84)
    on left: 17, on right: 13
qtermidxTwoatt (85)
    on left: 18, on right: 14
qtermcoefatt (86)
    on left: 19 20, on right: 15
qtermidxatt (87)
    on left: 21, on right: 16
nonlinearExpressions (88)
    on left: 22 23, on right: 1
nlnumberatt (89)
    on left: 24, on right: 23
nlnodes (90)
    on left: 25 27, on right: 23 27
@2 (91)
    on left: 26, on right: 27
nlIdxATT (92)
    on left: 28, on right: 27
nlnode (93)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51, on right: 27 53 55 57 59 61 63 66 67 70 71 74 75
    78 79 82 83 85 87 89 91 93 95 97 99 116
times (94)
    on left: 53, on right: 31
@3 (95)
    on left: 52, on right: 53
plus (96)
    on left: 55, on right: 32
@4 (97)
    on left: 54, on right: 55
minus (98)
    on left: 57, on right: 34
@5 (99)
    on left: 56, on right: 57
negate (100)
    on left: 59, on right: 35
@6 (101)
    on left: 58, on right: 59
divide (102)
    on left: 61, on right: 36
@7 (103)
    on left: 60, on right: 61
power (104)
    on left: 63, on right: 37
@8 (105)
    on left: 62, on right: 63
sum (106)
    on left: 65, on right: 33
@9 (107)
    on left: 64, on right: 65
anothersumnlnode (108)
    on left: 66 67, on right: 65 67
allDiff (109)
    on left: 69, on right: 51
@10 (110)
    on left: 68, on right: 69
anotherallDiffnlnode (111)
    on left: 70 71, on right: 69 71
max (112)
    on left: 73, on right: 47
@11 (113)
    on left: 72, on right: 73
anothermaxnlnode (114)
    on left: 74 75, on right: 73 75
min (115)
    on left: 77, on right: 48
@12 (116)
    on left: 76, on right: 77
anotherminnlnode (117)
    on left: 78 79, on right: 77 79
product (118)
    on left: 81, on right: 38
@13 (119)
    on left: 80, on right: 81
anotherproductnlnode (120)
    on left: 82 83, on right: 81 83
ln (121)
    on left: 85, on right: 39
@14 (122)
    on left: 84, on right: 85
sqrt (123)
    on left: 87, on right: 40
@15 (124)
    on left: 86, on right: 87
square (125)
    on left: 89, on right: 41
@16 (126)
    on left: 88, on right: 89
cos (127)
    on left: 91, on right: 43
@17 (128)
    on left: 90, on right: 91
sin (129)
    on left: 93, on right: 42
@18 (130)
    on left: 92, on right: 93
exp (131)
    on left: 95, on right: 44
@19 (132)
    on left: 94, on right: 95
abs (133)
    on left: 97, on right: 46
@20 (134)
    on left: 96, on right: 97
if (135)
    on left: 99, on right: 45
@21 (136)
    on left: 98, on right: 99
number (137)
    on left: 101, on right: 29
@22 (138)
    on left: 100, on right: 101
variable (139)
    on left: 103, on right: 30
@23 (140)
    on left: 102, on right: 103
numberend (141)
    on left: 104 105, on right: 101
E (142)
    on left: 107, on right: 49
@24 (143)
    on left: 106, on right: 107
eend (144)
    on left: 108 109, on right: 107
PI (145)
    on left: 111, on right: 50
@25 (146)
    on left: 110, on right: 111
piend (147)
    on left: 112 113, on right: 111
variableend (148)
    on left: 114 116 117, on right: 103
@26 (149)
    on left: 115, on right: 116
anotherNumberATT (150)
    on left: 118 119, on right: 101 119
numberATT (151)
    on left: 120 121 122, on right: 119
numbertypeATT (152)
    on left: 124, on right: 120
@27 (153)
    on left: 123, on right: 124
numberidATT (154)
    on left: 126, on right: 122
@28 (155)
    on left: 125, on right: 126
numbervalueATT (156)
    on left: 127 128, on right: 121
anotherVariableATT (157)
    on left: 129 130, on right: 103 130
variableATT (158)
    on left: 131 132, on right: 130
variablecoefATT (159)
    on left: 133 134, on right: 131
variableidxATT (160)
    on left: 135, on right: 132


state 0

    0 $accept: . osildoc $end

    QUADRATICCOEFFICIENTSSTART  shift, and go to state 1

    $default  reduce using rule 2 (quadraticcoefficients)

    osildoc                go to state 2
    quadraticcoefficients  go to state 3


state 1

    3 quadraticcoefficients: QUADRATICCOEFFICIENTSSTART . quadnumberatt qTermlist QUADRATICCOEFFICIENTSEND

    NUMBEROFQTERMSATT  shift, and go to state 4

    quadnumberatt  go to state 5


state 2

    0 $accept: osildoc . $end

    $end  shift, and go to state 6


state 3

    1 osildoc: quadraticcoefficients . nonlinearExpressions INSTANCEDATAEND OSILEND

    NONLINEAREXPRESSIONSSTART  shift, and go to state 7

    $default  reduce using rule 22 (nonlinearExpressions)

    nonlinearExpressions  go to state 8


state 4

    4 quadnumberatt: NUMBEROFQTERMSATT . QUOTE INTEGER QUOTE GREATERTHAN

    QUOTE  shift, and go to state 9


state 5

    3 quadraticcoefficients: QUADRATICCOEFFICIENTSSTART quadnumberatt . qTermlist QUADRATICCOEFFICIENTSEND

    $default  reduce using rule 7 (@1)

    qTermlist  go to state 10
    qterm      go to state 11
    @1         go to state 12


state 6

    0 $accept: osildoc $end .

    $default  accept


state 7

   23 nonlinearExpressions: NONLINEAREXPRESSIONSSTART . nlnumberatt nlnodes NONLINEAREXPRESSIONSEND

    NUMBEROFNONLINEAREXPRESSIONS  shift, and go to state 13

    nlnumberatt  go to state 14


state 8

    1 osildoc: quadraticcoefficients nonlinearExpressions . INSTANCEDATAEND OSILEND

    INSTANCEDATAEND  shift, and go to state 15


state 9

    4 quadnumberatt: NUMBEROFQTERMSATT QUOTE . INTEGER QUOTE GREATERTHAN

    INTEGER  shift, and go to state 16


state 10

    3 quadraticcoefficients: QUADRATICCOEFFICIENTSSTART quadnumberatt qTermlist . QUADRATICCOEFFICIENTSEND
    6 qTermlist: qTermlist . qterm

    QUADRATICCOEFFICIENTSEND  shift, and go to state 17

    $default  reduce using rule 7 (@1)

    qterm  go to state 18
    @1     go to state 12


state 11

    5 qTermlist: qterm .

    $default  reduce using rule 5 (qTermlist)


state 12

    8 qterm: @1 . QTERMSTART anotherqTermATT qtermend

    QTERMSTART  shift, and go to state 19


state 13

   24 nlnumberatt: NUMBEROFNONLINEAREXPRESSIONS . QUOTE INTEGER QUOTE GREATERTHAN

    QUOTE  shift, and go to state 20


state 14

   23 nonlinearExpressions: NONLINEAREXPRESSIONSSTART nlnumberatt . nlnodes NONLINEAREXPRESSIONSEND

    $default  reduce using rule 25 (nlnodes)

    nlnodes  go to state 21


state 15

    1 osildoc: quadraticcoefficients nonlinearExpressions INSTANCEDATAEND . OSILEND

    OSILEND  shift, and go to state 22


state 16

    4 quadnumberatt: NUMBEROFQTERMSATT QUOTE INTEGER . QUOTE GREATERTHAN

    QUOTE  shift, and go to state 23


state 17

    3 quadraticcoefficients: QUADRATICCOEFFICIENTSSTART quadnumberatt qTermlist QUADRATICCOEFFICIENTSEND .

    $default  reduce using rule 3 (quadraticcoefficients)


state 18

    6 qTermlist: qTermlist qterm .

    $default  reduce using rule 6 (qTermlist)


state 19

    8 qterm: @1 QTERMSTART . anotherqTermATT qtermend

    $default  reduce using rule 11 (anotherqTermATT)

    anotherqTermATT  go to state 24


state 20

   24 nlnumberatt: NUMBEROFNONLINEAREXPRESSIONS QUOTE . INTEGER QUOTE GREATERTHAN

    INTEGER  shift, and go to state 25


state 21

   23 nonlinearExpressions: NONLINEAREXPRESSIONSSTART nlnumberatt nlnodes . NONLINEAREXPRESSIONSEND
   27 nlnodes: nlnodes . NLSTART nlIdxATT GREATERTHAN nlnode @2 NLEND

    NONLINEAREXPRESSIONSEND  shift, and go to state 26
    NLSTART                  shift, and go to state 27


state 22

    1 osildoc: quadraticcoefficients nonlinearExpressions INSTANCEDATAEND OSILEND .

    $default  reduce using rule 1 (osildoc)


state 23

    4 quadnumberatt: NUMBEROFQTERMSATT QUOTE INTEGER QUOTE . GREATERTHAN

    GREATERTHAN  shift, and go to state 28


state 24

    8 qterm: @1 QTERMSTART anotherqTermATT . qtermend
   12 anotherqTermATT: anotherqTermATT . qtermatt

    IDXONEATT     shift, and go to state 29
    IDXTWOATT     shift, and go to state 30
    COEFATT       shift, and go to state 31
    IDXATT        shift, and go to state 32
    ENDOFELEMENT  shift, and go to state 33
    GREATERTHAN   shift, and go to state 34

    qtermend        go to state 35
    qtermatt        go to state 36
    qtermidxOneatt  go to state 37
    qtermidxTwoatt  go to state 38
    qtermcoefatt    go to state 39
    qtermidxatt     go to state 40


state 25

   24 nlnumberatt: NUMBEROFNONLINEAREXPRESSIONS QUOTE INTEGER . QUOTE GREATERTHAN

    QUOTE  shift, and go to state 41


state 26

   23 nonlinearExpressions: NONLINEAREXPRESSIONSSTART nlnumberatt nlnodes NONLINEAREXPRESSIONSEND .

    $default  reduce using rule 23 (nonlinearExpressions)


state 27

   27 nlnodes: nlnodes NLSTART . nlIdxATT GREATERTHAN nlnode @2 NLEND

    IDXATT  shift, and go to state 42

    nlIdxATT  go to state 43


state 28

    4 quadnumberatt: NUMBEROFQTERMSATT QUOTE INTEGER QUOTE GREATERTHAN .

    $default  reduce using rule 4 (quadnumberatt)


state 29

   17 qtermidxOneatt: IDXONEATT . QUOTE INTEGER QUOTE

    QUOTE  shift, and go to state 44


state 30

   18 qtermidxTwoatt: IDXTWOATT . QUOTE INTEGER QUOTE

    QUOTE  shift, and go to state 45


state 31

   19 qtermcoefatt: COEFATT . QUOTE DOUBLE QUOTE
   20             | COEFATT . QUOTE INTEGER QUOTE

    QUOTE  shift, and go to state 46


state 32

   21 qtermidxatt: IDXATT . QUOTE INTEGER QUOTE

    QUOTE  shift, and go to state 47


state 33

    9 qtermend: ENDOFELEMENT .

    $default  reduce using rule 9 (qtermend)


state 34

   10 qtermend: GREATERTHAN . QTERMEND

    QTERMEND  shift, and go to state 48


state 35

    8 qterm: @1 QTERMSTART anotherqTermATT qtermend .

    $default  reduce using rule 8 (qterm)


state 36

   12 anotherqTermATT: anotherqTermATT qtermatt .

    $default  reduce using rule 12 (anotherqTermATT)


state 37

   13 qtermatt: qtermidxOneatt .

    $default  reduce using rule 13 (qtermatt)


state 38

   14 qtermatt: qtermidxTwoatt .

    $default  reduce using rule 14 (qtermatt)


state 39

   15 qtermatt: qtermcoefatt .

    $default  reduce using rule 15 (qtermatt)


state 40

   16 qtermatt: qtermidxatt .

    $default  reduce using rule 16 (qtermatt)


state 41

   24 nlnumberatt: NUMBEROFNONLINEAREXPRESSIONS QUOTE INTEGER QUOTE . GREATERTHAN

    GREATERTHAN  shift, and go to state 49


state 42

   28 nlIdxATT: IDXATT . QUOTE INTEGER QUOTE

    QUOTE  shift, and go to state 50


state 43

   27 nlnodes: nlnodes NLSTART nlIdxATT . GREATERTHAN nlnode @2 NLEND

    GREATERTHAN  shift, and go to state 51


state 44

   17 qtermidxOneatt: IDXONEATT QUOTE . INTEGER QUOTE

    INTEGER  shift, and go to state 52


state 45

   18 qtermidxTwoatt: IDXTWOATT QUOTE . INTEGER QUOTE

    INTEGER  shift, and go to state 53


state 46

   19 qtermcoefatt: COEFATT QUOTE . DOUBLE QUOTE
   20             | COEFATT QUOTE . INTEGER QUOTE

    INTEGER  shift, and go to state 54
    DOUBLE   shift, and go to state 55


state 47

   21 qtermidxatt: IDXATT QUOTE . INTEGER QUOTE

    INTEGER  shift, and go to state 56


state 48

   10 qtermend: GREATERTHAN QTERMEND .

    $default  reduce using rule 10 (qtermend)


state 49

   24 nlnumberatt: NUMBEROFNONLINEAREXPRESSIONS QUOTE INTEGER QUOTE GREATERTHAN .

    $default  reduce using rule 24 (nlnumberatt)


state 50

   28 nlIdxATT: IDXATT QUOTE . INTEGER QUOTE

    INTEGER  shift, and go to state 57


state 51

   27 nlnodes: nlnodes NLSTART nlIdxATT GREATERTHAN . nlnode @2 NLEND

    TIMESSTART     shift, and go to state 58
    NUMBERSTART    shift, and go to state 59
    POWERSTART     shift, and go to state 60
    PLUSSTART      shift, and go to state 61
    MINUSSTART     shift, and go to state 62
    DIVIDESTART    shift, and go to state 63
    LNSTART        shift, and go to state 64
    SQRTSTART      shift, and go to state 65
    SUMSTART       shift, and go to state 66
    PRODUCTSTART   shift, and go to state 67
    EXPSTART       shift, and go to state 68
    NEGATESTART    shift, and go to state 69
    IFSTART        shift, and go to state 70
    SQUARESTART    shift, and go to state 71
    COSSTART       shift, and go to state 72
    SINSTART       shift, and go to state 73
    VARIABLESTART  shift, and go to state 74
    ABSSTART       shift, and go to state 75
    MAXSTART       shift, and go to state 76
    ALLDIFFSTART   shift, and go to state 77
    MINSTART       shift, and go to state 78
    ESTART         shift, and go to state 79
    PISTART        shift, and go to state 80

    nlnode    go to state 81
    times     go to state 82
    plus      go to state 83
    minus     go to state 84
    negate    go to state 85
    divide    go to state 86
    power     go to state 87
    sum       go to state 88
    allDiff   go to state 89
    max       go to state 90
    min       go to state 91
    product   go to state 92
    ln        go to state 93
    sqrt      go to state 94
    square    go to state 95
    cos       go to state 96
    sin       go to state 97
    exp       go to state 98
    abs       go to state 99
    if        go to state 100
    number    go to state 101
    variable  go to state 102
    E         go to state 103
    PI        go to state 104


state 52

   17 qtermidxOneatt: IDXONEATT QUOTE INTEGER . QUOTE

    QUOTE  shift, and go to state 105


state 53

   18 qtermidxTwoatt: IDXTWOATT QUOTE INTEGER . QUOTE

    QUOTE  shift, and go to state 106


state 54

   20 qtermcoefatt: COEFATT QUOTE INTEGER . QUOTE

    QUOTE  shift, and go to state 107


state 55

   19 qtermcoefatt: COEFATT QUOTE DOUBLE . QUOTE

    QUOTE  shift, and go to state 108


state 56

   21 qtermidxatt: IDXATT QUOTE INTEGER . QUOTE

    QUOTE  shift, and go to state 109


state 57

   28 nlIdxATT: IDXATT QUOTE INTEGER . QUOTE

    QUOTE  shift, and go to state 110


state 58

   53 times: TIMESSTART . @3 nlnode nlnode TIMESEND

    $default  reduce using rule 52 (@3)

    @3  go to state 111


state 59

  101 number: NUMBERSTART . @22 anotherNumberATT numberend

    $default  reduce using rule 100 (@22)

    @22  go to state 112


state 60

   63 power: POWERSTART . @8 nlnode nlnode POWEREND

    $default  reduce using rule 62 (@8)

    @8  go to state 113


state 61

   55 plus: PLUSSTART . @4 nlnode nlnode PLUSEND

    $default  reduce using rule 54 (@4)

    @4  go to state 114


state 62

   57 minus: MINUSSTART . @5 nlnode nlnode MINUSEND

    $default  reduce using rule 56 (@5)

    @5  go to state 115


state 63

   61 divide: DIVIDESTART . @7 nlnode nlnode DIVIDEEND

    $default  reduce using rule 60 (@7)

    @7  go to state 116


state 64

   85 ln: LNSTART . @14 nlnode LNEND

    $default  reduce using rule 84 (@14)

    @14  go to state 117


state 65

   87 sqrt: SQRTSTART . @15 nlnode SQRTEND

    $default  reduce using rule 86 (@15)

    @15  go to state 118


state 66

   65 sum: SUMSTART . @9 anothersumnlnode SUMEND

    $default  reduce using rule 64 (@9)

    @9  go to state 119


state 67

   81 product: PRODUCTSTART . @13 anotherproductnlnode PRODUCTEND

    $default  reduce using rule 80 (@13)

    @13  go to state 120


state 68

   95 exp: EXPSTART . @19 nlnode EXPEND

    $default  reduce using rule 94 (@19)

    @19  go to state 121


state 69

   59 negate: NEGATESTART . @6 nlnode NEGATEEND

    $default  reduce using rule 58 (@6)

    @6  go to state 122


state 70

   99 if: IFSTART . @21 nlnode nlnode nlnode IFEND

    $default  reduce using rule 98 (@21)

    @21  go to state 123


state 71

   89 square: SQUARESTART . @16 nlnode SQUAREEND

    $default  reduce using rule 88 (@16)

    @16  go to state 124


state 72

   91 cos: COSSTART . @17 nlnode COSEND

    $default  reduce using rule 90 (@17)

    @17  go to state 125


state 73

   93 sin: SINSTART . @18 nlnode SINEND

    $default  reduce using rule 92 (@18)

    @18  go to state 126


state 74

  103 variable: VARIABLESTART . @23 anotherVariableATT variableend

    $default  reduce using rule 102 (@23)

    @23  go to state 127


state 75

   97 abs: ABSSTART . @20 nlnode ABSEND

    $default  reduce using rule 96 (@20)

    @20  go to state 128


state 76

   73 max: MAXSTART . @11 anothermaxnlnode MAXEND

    $default  reduce using rule 72 (@11)

    @11  go to state 129


state 77

   69 allDiff: ALLDIFFSTART . @10 anotherallDiffnlnode ALLDIFFEND

    $default  reduce using rule 68 (@10)

    @10  go to state 130


state 78

   77 min: MINSTART . @12 anotherminnlnode MINEND

    $default  reduce using rule 76 (@12)

    @12  go to state 131


state 79

  107 E: ESTART . @24 eend

    $default  reduce using rule 106 (@24)

    @24  go to state 132


state 80

  111 PI: PISTART . @25 piend

    $default  reduce using rule 110 (@25)

    @25  go to state 133


state 81

   27 nlnodes: nlnodes NLSTART nlIdxATT GREATERTHAN nlnode . @2 NLEND

    $default  reduce using rule 26 (@2)

    @2  go to state 134


state 82

   31 nlnode: times .

    $default  reduce using rule 31 (nlnode)


state 83

   32 nlnode: plus .

    $default  reduce using rule 32 (nlnode)


state 84

   34 nlnode: minus .

    $default  reduce using rule 34 (nlnode)


state 85

   35 nlnode: negate .

    $default  reduce using rule 35 (nlnode)


state 86

   36 nlnode: divide .

    $default  reduce using rule 36 (nlnode)


state 87

   37 nlnode: power .

    $default  reduce using rule 37 (nlnode)


state 88

   33 nlnode: sum .

    $default  reduce using rule 33 (nlnode)


state 89

   51 nlnode: allDiff .

    $default  reduce using rule 51 (nlnode)


state 90

   47 nlnode: max .

    $default  reduce using rule 47 (nlnode)


state 91

   48 nlnode: min .

    $default  reduce using rule 48 (nlnode)


state 92

   38 nlnode: product .

    $default  reduce using rule 38 (nlnode)


state 93

   39 nlnode: ln .

    $default  reduce using rule 39 (nlnode)


state 94

   40 nlnode: sqrt .

    $default  reduce using rule 40 (nlnode)


state 95

   41 nlnode: square .

    $default  reduce using rule 41 (nlnode)


state 96

   43 nlnode: cos .

    $default  reduce using rule 43 (nlnode)


state 97

   42 nlnode: sin .

    $default  reduce using rule 42 (nlnode)


state 98

   44 nlnode: exp .

    $default  reduce using rule 44 (nlnode)


state 99

   46 nlnode: abs .

    $default  reduce using rule 46 (nlnode)


state 100

   45 nlnode: if .

    $default  reduce using rule 45 (nlnode)


state 101

   29 nlnode: number .

    $default  reduce using rule 29 (nlnode)


state 102

   30 nlnode: variable .

    $default  reduce using rule 30 (nlnode)


state 103

   49 nlnode: E .

    $default  reduce using rule 49 (nlnode)


state 104

   50 nlnode: PI .

    $default  reduce using rule 50 (nlnode)


state 105

   17 qtermidxOneatt: IDXONEATT QUOTE INTEGER QUOTE .

    $default  reduce using rule 17 (qtermidxOneatt)


state 106

   18 qtermidxTwoatt: IDXTWOATT QUOTE INTEGER QUOTE .

    $default  reduce using rule 18 (qtermidxTwoatt)


state 107

   20 qtermcoefatt: COEFATT QUOTE INTEGER QUOTE .

    $default  reduce using rule 20 (qtermcoefatt)


state 108

   19 qtermcoefatt: COEFATT QUOTE DOUBLE QUOTE .

    $default  reduce using rule 19 (qtermcoefatt)


state 109

   21 qtermidxatt: IDXATT QUOTE INTEGER QUOTE .

    $default  reduce using rule 21 (qtermidxatt)


state 110

   28 nlIdxATT: IDXATT QUOTE INTEGER QUOTE .

    $default  reduce using rule 28 (nlIdxATT)


state 111

   53 times: TIMESSTART @3 . nlnode nlnode TIMESEND

    TIMESSTART     shift, and go to state 58
    NUMBERSTART    shift, and go to state 59
    POWERSTART     shift, and go to state 60
    PLUSSTART      shift, and go to state 61
    MINUSSTART     shift, and go to state 62
    DIVIDESTART    shift, and go to state 63
    LNSTART        shift, and go to state 64
    SQRTSTART      shift, and go to state 65
    SUMSTART       shift, and go to state 66
    PRODUCTSTART   shift, and go to state 67
    EXPSTART       shift, and go to state 68
    NEGATESTART    shift, and go to state 69
    IFSTART        shift, and go to state 70
    SQUARESTART    shift, and go to state 71
    COSSTART       shift, and go to state 72
    SINSTART       shift, and go to state 73
    VARIABLESTART  shift, and go to state 74
    ABSSTART       shift, and go to state 75
    MAXSTART       shift, and go to state 76
    ALLDIFFSTART   shift, and go to state 77
    MINSTART       shift, and go to state 78
    ESTART         shift, and go to state 79
    PISTART        shift, and go to state 80

    nlnode    go to state 135
    times     go to state 82
    plus      go to state 83
    minus     go to state 84
    negate    go to state 85
    divide    go to state 86
    power     go to state 87
    sum       go to state 88
    allDiff   go to state 89
    max       go to state 90
    min       go to state 91
    product   go to state 92
    ln        go to state 93
    sqrt      go to state 94
    square    go to state 95
    cos       go to state 96
    sin       go to state 97
    exp       go to state 98
    abs       go to state 99
    if        go to state 100
    number    go to state 101
    variable  go to state 102
    E         go to state 103
    PI        go to state 104


state 112

  101 number: NUMBERSTART @22 . anotherNumberATT numberend

    $default  reduce using rule 118 (anotherNumberATT)

    anotherNumberATT  go to state 136


state 113

   63 power: POWERSTART @8 . nlnode nlnode POWEREND

    TIMESSTART     shift, and go to state 58
    NUMBERSTART    shift, and go to state 59
    POWERSTART     shift, and go to state 60
    PLUSSTART      shift, and go to state 61
    MINUSSTART     shift, and go to state 62
    DIVIDESTART    shift, and go to state 63
    LNSTART        shift, and go to state 64
    SQRTSTART      shift, and go to state 65
    SUMSTART       shift, and go to state 66
    PRODUCTSTART   shift, and go to state 67
    EXPSTART       shift, and go to state 68
    NEGATESTART    shift, and go to state 69
    IFSTART        shift, and go to state 70
    SQUARESTART    shift, and go to state 71
    COSSTART       shift, and go to state 72
    SINSTART       shift, and go to state 73
    VARIABLESTART  shift, and go to state 74
    ABSSTART       shift, and go to state 75
    MAXSTART       shift, and go to state 76
    ALLDIFFSTART   shift, and go to state 77
    MINSTART       shift, and go to state 78
    ESTART         shift, and go to state 79
    PISTART        shift, and go to state 80

    nlnode    go to state 137
    times     go to state 82
    plus      go to state 83
    minus     go to state 84
    negate    go to state 85
    divide    go to state 86
    power     go to state 87
    sum       go to state 88
    allDiff   go to state 89
    max       go to state 90
    min       go to state 91
    product   go to state 92
    ln        go to state 93
    sqrt      go to state 94
    square    go to state 95
    cos       go to state 96
    sin       go to state 97
    exp       go to state 98
    abs       go to state 99
    if        go to state 100
    number    go to state 101
    variable  go to state 102
    E         go to state 103
    PI        go to state 104


state 114

   55 plus: PLUSSTART @4 . nlnode nlnode PLUSEND
